# audio_amp

./: .gitignore  Makefile.am  README.md  TODO.txt  autogen.sh  configure.ac  configure.in
src/: .gitignore  Makefile.am  amp.c  amp_functions.c  amp_functions.h  audio_amp.c
